<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/login_container_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.braniax.cashcobra.RegisterActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"

            android:src="@drawable/login_bg" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:background="@color/white"
            android:orientation="vertical" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:alpha="0.8"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo" />


                <EditText
                    android:id="@+id/edt_txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:alpha="0.7"
                    android:background="@drawable/edt_txt_bg"
                    android:focusable="auto"
                    android:hint="@string/user_email"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/edt_txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:alpha="0.7"
                    android:background="@drawable/edt_txt_bg"
                    android:focusable="auto"
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_selector"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/txt_vu_forget_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/make_new_account"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/google_login" />

                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>


    </FrameLayout>

</ScrollView>